<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- feature activity strings -->
    <string name="login_bind">请将您的设备与家庭云绑定</string>
    <string name="login_notice">提示:绑定时请开启WIFI并连接网络</string>
    <string name="login_register_notice">请填写您家庭的注册信息</string>
    <string name="login_username">家庭ID:</string>
    <string name="login_password">密\t\t码:</string>
    <string name="login_confirm">确认密码:</string>
    <string name="login_logging">登录中</string>
    <string name="login_loggins">登录成功，您的设备已在云端登录</string>
    <string name="login_logginf">登录失败，请重试</string>
    <string name="login_logginfi">用户名或密码错误</string>
    <string name="login_logginfn">网络连接失败，请检查网络</string>
    <string name="login_logginfw">WIFI没有开启</string>
    <string name="login_registers">注册成功，请按返回键进行登录</string>
    <string name="login_registerf">注册失败，请检查注册信息</string>
    <string name="login_registern">该用户名已经被注册</string>
    <string name="login_registerp">输入的密码不一致，请重新输入</string>
    <string name="login_register">新家庭注册</string>
    <string name="login_login">家庭云绑定</string>
    <string name="login_done">完成</string>
    <string name="login_back">返\t\t回</string>
    <string name="login_next">下一步</string>
    <string name="login_already">! 您的设备已经在云端登录</string>
    <string name="login_welcome">欢迎使用智墨平安家庭</string>
    <string name="login_welcome_content">\t\t\t\t您正在使用智墨平安家庭云服务。您可以将您的设备登录到家庭云端，
        从而让该设备处于家庭云的呵护之下。该服务需要使用一些网络流量，并取得一些必要的设备信息。
        \n\t\t\t\t如果您已经有家庭ID，请点击“下一步”，并在下一页中输入家庭ID和密码，然后点击“家庭云绑定”。
        如果没有家庭ID，请在点击“下一步”后选择“新家庭注册”。</string>


    <!-- Manifest strings -->
    <string name="activity_remote_device_admin">App/Device Admin</string>
    <string name="remote_device_admin">ZhiMo Tech Remote Device Admin</string>
    <string name="remote_device_admin_description">ZhiMo Tech implementation provides a UI
        for you to directly control what the DeviceAdmin does with the
        system.</string>

    <!-- Strings used in preference headers and preference definitions -->
    <string name="header_general">General</string>
    <string name="header_quality">Password quality</string>
    <string name="header_expiration">Password expiration</string>
    <string name="header_lock_wipe">Lock screen / Wipe</string>
    <string name="header_encryption">Encryption</string>

    <string name="enable_admin">Enable admin</string>
    <string name="device_capabilities_category">Device capabilities</string>
    <string name="disable_camera">Disable all device cameras</string>
    <string name="disable_keyguard_widgets">Disable keyguard widgets</string>
    <string name="disable_keyguard_secure_camera">Disable keyguard secure camera</string>
    <string name="keyguard_widgets_disabled">Keyguard widgets disabled</string>
    <string name="keyguard_widgets_enabled">Keyguard widgets enabled</string>
    <string name="keyguard_secure_camera_disabled">Keyguard secure camera disabled</string>
    <string name="keyguard_secure_camera_enabled">Keyguard secure camera enabled</string>
    <string name="camera_disabled">Device cameras disabled</string>
    <string name="camera_enabled">Device cameras enabled</string>
    <string name="password_controls_category">Password controls</string>
    <string name="set_password_user">Set password (user)</string>
    <string name="set_password_api">Set password (via API)</string>
    <string name="set_password_api_dialog">Set screen lock password to</string>
    <string name="password_quality_category">Password quality</string>
    <string name="password_quality">Password quality</string>
    <string name="password_minimum_length">Minimum length </string>
    <string name="password_minimum_letters">Minimum letters</string>
    <string name="password_minimum_numeric">Minimum numeric</string>
    <string name="password_minimum_lower_case">Minimum lower case</string>
    <string name="password_minimum_upper_case">Minimum upper case</string>
    <string name="password_minimum_symbols">Minimum symbols</string>
    <string name="password_minimum_non_letter">Minimum non-letter</string>
    <string name="password_expiration_category">Password history / Expiration</string>
    <string name="password_history_depth">Password history depth</string>
    <string name="password_expiration_timeout">Password expiration timeout (minutes)</string>
    <string name="password_expiration_status">Password expiration status</string>
    <string name="lock_wipe_category">Lock screen / Wipe</string>
    <string name="maximum_lock_time">Max time to screen lock (minutes)</string>
    <string name="maximum_password_fails">Max password failures for local wipe</string>
    <string name="lock_screen">Lock screen now</string>
    <string name="wipe_data">Wipe data</string>
    <string name="wipe_data_summary">Wipe internal data, like a factory reset</string>
    <string name="wipe_all_data">Wipe all data</string>
    <string name="wipe_all_data_summary">Wipe internal data and external storage</string>
    <string name="encryption_category">Encryption</string>
    <string name="require_encryption">Require encryption</string>
    <string name="activate_encryption">Activate encryption</string>

    <!-- Strings used by RemoteDeviceAdmin controller code -->
    <string name="password_sufficient">Current password meets policy requirements</string>
    <string name="password_insufficient">Current password does not meet policy requirements</string>
    <string name="monkey_reset_password">You can\'t reset my password, you are a monkey!</string>
    <string name="monkey_lock_screen">You can\'t lock my screen, you are a monkey!</string>
    <string name="monkey_encryption">You can\'t start encryption, you are a monkey!</string>
    <string name="monkey_wipe_data">You can\'t wipe my data, you are a monkey!</string>
    <string name="monkey_ok">I admit defeat</string>
    <string name="reset_password_warning">
        You have just reset your screen lock password to \"%1$s\""</string>
    <string name="reset_password_ok">Don\'t forget it</string>
    <string name="add_admin_extra_app_text">
        Additional text explaining why this needs to be added.</string>
    <string name="status_local_global">Local=%1$s / Global=%2$s</string>
    <string name="status_device_encryption">Device encryption status=%1$s</string>
    <string name="status_days_hours_minutes">%1$sd %2$sh %3$sm</string>
    <string name="number_format_warning">Bad value \"%1$s\""</string>
    <string name="wipe_warning_first">This will erase all of your data.  Are you sure?</string>
    <string name="wipe_warning_first_ok">Yes</string>
    <string name="wipe_warning_first_no">No</string>
    <string name="wipe_warning_second">This is not a test. This WILL erase all of your data!
        Are you really absolutely sure?</string>
    <string name="wipe_warning_second_full">This is not a test. This WILL erase all of your data,
        including external storage! Are you really absolutely sure?</string>
    <string name="wipe_warning_second_ok">BOOM!</string>
    <string name="wipe_warning_second_no">Oops, run away!</string>
    <string name="encryption_not_supported">Encryption is not supported on this device.</string>
    <string name="encryption_not_supported_ok">OK</string>
    <string name="encryption_status_unknown">unknown</string>
    <string name="encryption_status_unsupported">unsupported</string>
    <string name="encryption_status_inactive">inactive</string>
    <string name="encryption_status_activating">activating</string>
    <string name="encryption_status_active">active</string>
    <string name="expiration_status_none">None</string>
    <string name="expiration_status_past">Password expired %1$s ago</string>
    <string name="expiration_status_future">Password will expire %1$s from now</string>

    <!-- Strings used by the RemoteDeviceAdminReceiver -->
    <string name="admin_receiver_status">ZhiMo Remote Device Admin: %1$s</string>
    <string name="admin_receiver_status_enabled">enabled</string>
    <string name="admin_receiver_status_disabled">disabled</string>
    <string name="admin_receiver_status_pw_changed">pw changed</string>
    <string name="admin_receiver_status_pw_failed">pw failed</string>
    <string name="admin_receiver_status_pw_succeeded">pw succeeded</string>
    <string name="admin_receiver_status_disable_warning">
        This is an optional message to warn the user about disabling.</string>
        
    <!-- Strings used by DebugActivity -->
    <string name="debug_inputip">Please Input Your IP</string>
    <string name="debug_username">Please Input Your Name</string>
    <string name="debug_password">Please Input Your Password</string>
    <string name="debug_connectbtn">Connect</string>
    <string name="debug_disconnectbtn">Disconnect</string>
    <string name="debug_connectstatus">Service Started</string>
    <string name="debug_debug">Debug Console</string>
    <string name="debug_api_testing">API testing</string>
    <string name="debug_advancedbtn">Advanced</string>
    <string name="debug_loginpage">Login Page</string>
    <string name="debug_inputname">Please Input Package Name and useId</string>
    <string name="debug_enable">Enable</string>
    <string name="debug_disable">Disable</string>
    <string name="debug_install">Install</string>
    <string name="debug_remove">Remove</string>
    <string name="debug_querytext">Send Query Command</string>
    <string name="debug_queryReport">Send Report Command</string>
    <string name="debug_appinfo">App</string>
    <string name="debug_deviceinfo">Device</string>
    <string name="debug_userinfo">User</string>
    <string name="debug_apptrace">Running App</string>
    <string name="debug_appuntrace">App Untrace</string>
    <string name="debug_postrace">Pos Trace</string>
    <string name="debug_posuntrace">Pos Untrace</string>
    <string name="debug_deviceadmin">Remote Device Admin</string>
    <string name="debug_sendpolicy">Send Policy</string>
    <string name="debug_policy">Policy</string>
    <string name="debug_uploadlogs">Upload Logs</string>
    <string name="debug_logs">Logs</string>

    <!-- Strings used by zmtech_authenticator -->
    <string name="acc_label">智墨向导</string>
    <string name="acc_title_fmt">ZMTech Account Format</string>
    
    <string name="app_name">智墨平安家庭</string>
    <string name="disablescreen">请休息一会儿\n您的设备已被锁定，需要解锁请与管理员联系</string>

    <!-- Strings for Api Testing Preferences -->
    <string name="preferences_for_api_testing">API testing</string>
    <string name="pfat_cat_remote_desktop">Remote Desktop</string>
    <string name="pfat_using_usb_interface">Use USB network interface</string>
    <string name="pfat_using_usb_interface_sum">Click to start usb network</string>
    <string name="pfat_desktop_opening">Start Remote Desktop</string>
    <string name="pfat_desktop_opening_sum">no network</string>
    <string name="pfat_cat_toggle_screen">Screen Toggling</string>
    <string name="pfat_toggle_screen_timeout">Screen Toggling timeout</string>
    <string name="pfat_toggle_screen_timeout_dialog">Keep screen diable:</string>
    <string name="pfat_blank_screen">Start blanking screen</string>
    <string name="pfat_blank_screen_sum">not started.</string>
    <string name="pfat_cat_backup">Backup &amp; Restore</string>
    <string name="pfat_backup">Backup your phone</string>
    <string name="pfat_restore">Restore your phone</string>
    <string name="pfat_backup_special">Backup Contacts, CallLog, SMS</string>
    <string name="pfat_restore_special">Restore Contacts, CallLog, SMS</string>
</resources>
