<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall" >

    <TextView
        android:id="@+id/login_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_notice"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000" />

    <TextView
        android:id="@+id/login_alreadylogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_already"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_notice"
        android:layout_below="@+id/login_notice"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_username"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_password"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/login_inputusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/login_margin_left"
        android:layout_toRightOf="@+id/login_username"
        android:textColor="#000000"
        android:ems="10" />

   <EditText
        android:id="@+id/login_inputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/login_margin_left"
        android:layout_alignBaseline="@+id/login_password"
        android:layout_alignLeft="@+id/login_inputusername"
        android:textColor="#000000"
        android:ems="10" >
    </EditText>

    <ProgressBar
        android:id="@+id/login_loggingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_logining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_loggingbar"
        android:layout_toLeftOf="@+id/login_loggingbar"
        android:text="@string/login_logging"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_loginsuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_loggins"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000088"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_loginfail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_logginf"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000"
        android:visibility="invisible" />

    <Button
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="@dimen/login_margin_top_button"
        android:text="@string/login_register" />

    <Button
        android:id="@+id/login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_register"
        android:layout_alignRight="@+id/login_inputpassword"
        android:text="@string/login_login" />

    <Button
        android:id="@+id/login_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_login"
        android:layout_alignBottom="@+id/login_login"
        android:layout_centerHorizontal="true"
		android:visibility="invisible"
        android:text="@string/login_done" />

</RelativeLayout>