<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall" >

    <TextView
        android:id="@+id/register_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_register_notice"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#006600" />


    <TextView
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_notice"
        android:layout_below="@+id/register_notice"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_username"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_username"
        android:layout_below="@+id/register_username"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_password"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
        android:id="@+id/register_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_password"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_confirm"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/register_inputusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/login_margin_left"
        android:layout_toRightOf="@+id/register_username"
        android:background="#90ffffff"
        android:textColor="#000000"
		android:textCursorDrawable="@null"
        android:ems="10" />

   <EditText
        android:id="@+id/register_inputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/login_margin_left"
        android:layout_alignBaseline="@+id/register_password"
        android:layout_alignLeft="@+id/register_inputusername"
        android:inputType="textPassword"
        android:background="#90ffffff"
        android:textColor="#000000"
        android:textCursorDrawable="@null"
        android:ems="10" >
    </EditText>

	<EditText
        android:id="@+id/register_inputconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/login_margin_left"
        android:layout_alignBaseline="@+id/register_confirm"
        android:layout_alignLeft="@+id/register_inputusername"
        android:inputType="textPassword"
        android:background="#90ffffff"
        android:textColor="#000000"
        android:textCursorDrawable="@null"
        android:ems="10" >
    </EditText>


    <TextView
        android:id="@+id/regiser_loginsuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_registers"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000088"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/regiser_loginfail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_registerf"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000"
        android:visibility="invisible" />

    <Button
        android:id="@+id/register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_confirm"
        android:layout_below="@+id/register_confirm"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/login_back" />

    <Button
        android:id="@+id/register_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_back"
        android:layout_alignRight="@+id/register_inputconfirm"
        android:text="@string/login_register" />


</RelativeLayout>